--- a/index.html
+++ b/index.html
@@ -1,153 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AppleWeb</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/6a16d25428.js" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/6a16d25428.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-
+  <body>
     <header>
-
-        <ul>
-
-            <li><a href="./index.html"><i class="fa-brands fa-apple"></i></a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Mac</a></li>
-            <li><a href="#">iPad</a></li>
-            <li><a href="#">iPhone</a></li>
-            <li><a href="#">Watch</a></li>
-            <li><a href="#">AirPods</a></li>
-            <li><a href="#">Tv & Home</a></li>
-            <li><a href="#">Entertainment</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-bag-shopping"></i></a></li>
-
-        </ul>
-
-
+      <ul>
+        <li>
+          <a href="./index.html"><i class="fa-brands fa-apple"></i></a>
+        </li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Mac</a></li>
+        <li><a href="#">iPad</a></li>
+        <li><a href="#">iPhone</a></li>
+        <li><a href="#">Watch</a></li>
+        <li><a href="#">AirPods</a></li>
+        <li><a href="#">Tv & Home</a></li>
+        <li><a href="#">Entertainment</a></li>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">Support</a></li>
+        <li>
+          <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        </li>
+        <li>
+          <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
+        </li>
+      </ul>
     </header>
 
     <section>
+      <div>
+        <img
+          src="./assets/iphone_14_pro_light__dfhcc00ur2oi_large.svg.svg"
+          alt=""
+        />
+        <p>iPhone 14 Pro</p>
+        <p>New</p>
+      </div>
 
-        <div>
+      <div>
+        <img
+          src="./assets/iphone_14_light__fwknsxkf80uq_large.svg.svg"
+          alt=""
+        />
+        <p>iPhone 14</p>
+        <p>New</p>
+      </div>
 
-            <img src="" alt="">
-            <p>iPhone 14 Pro</p>
-            <p>New</p>
+      <div>
+        <img
+          src="./assets/iphone_13_light__ewo3e0sf67o2_large.svg.svg"
+          alt=""
+        />
+        <p>iPhone 13</p>
+      </div>
 
-        </div>
+      <div>
+        <img
+          src="./assets/iphone_se_light__fhg8duy6ffau_large.svg.svg"
+          alt=""
+        />
+        <p>iPhone SE</p>
+      </div>
 
-        <div>
+      <div>
+        <img
+          src="./assets/iphone_12_light__cxh2ll1zwpw2_large.svg.svg"
+          alt=""
+        />
+        <p>iPhone 12</p>
+      </div>
 
-            <img src="" alt="">
-            <p>iPhone 14</p>
-            <p>New</p>
+      <div>
+        <img
+          src="./assets/iphone_compare_light__f4jj7brpbvm2_large.svg.svg"
+          alt=""
+        />
+        <p>Compare</p>
+      </div>
 
-        </div>
+      <div>
+        <img src="./assets/airpods_light__8oj157p2476a_large.svg.svg" alt="" />
+        <p>AirPods</p>
+      </div>
 
-        <div>
+      <div>
+        <img src="./assets/airtag_light__cb2bmnv6aoeu_large.svg.svg" alt="" />
+        <p>AirTag</p>
+      </div>
 
-            <img src="" alt="">
-            <p>iPhone 13</p>
+      <div>
+        <img
+          src="./assets/accessories_light__ed5l6ipsevqu_large.svg.svg"
+          alt=""
+        />
+        <p>Accessories</p>
+      </div>
 
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>iPhone SE</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>iPhone 12</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>Compare</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>AirPods</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>AirTag</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>Accessories</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>Apple Card</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>iOS 18</p>
-
-        </div>
-
-        <div>
-
-            <img src="" alt="">
-            <p>Shop iPhone</p>
-
-        </div>
-
+      <div>
+        <img
+          src="./assets/iphone_apple_card_light__dtut839e76c2_large.svg.svg"
+          alt=""
+        />
+        <p>Apple Card</p>
+      </div>
     </section>
 
     <section>
+      <div>
+        <p>New</p>
+        <p>iPhone 14</p>
+        <h1>Big and Bigger</h1>
+      </div>
 
-        <div>
-            <p>New</p>
-            <p>iPhone 14</p>
-            <h1>Big and Bigger</h1>
-        </div>
+      <p>From $33.29/mo. for 24 mo. or $799 before trade-in1</p>
 
+      <div>
+        <button>Buy</button>
+        <a href="#">Learn More</a>
+      </div>
 
-        <p>From $33.29/mo. for 24 mo. or $799 before trade-in1</p>
-
-        <div>
-            <button>Buy</button>
-            <a href="#">Learn More</a>
-        </div>
-
-        <img src="" alt="">
+      <img src="./assets/figure.png" alt="" />
     </section>
 
-    
-
-    <footer>
-    </footer>
-
-</body>
-
+    <footer></footer>
+  </body>
 </html>
