apple clone updated

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       </ul>
     </header>
 
-    <section>
+    <section class="items">
       <div>
         <img
           src="./assets/iphone_14_pro_light__dfhcc00ur2oi_large.svg.svg"
           alt=""
         />
         <p>iPhone 14 Pro</p>
-        <p>New</p>
+        <p class="new">New</p>
       </div>
 
       <div>
@@ -52,7 +52,7 @@
           alt=""
         />
         <p>iPhone 14</p>
-        <p>New</p>
+        <p class="new">New</p>
       </div>
 
       <div>
